force-app/main/default/objects/Invoice_Taxes__c/Invoice_Taxes__c.object-meta.xml
<CustomObject>
    <label>Invoice Tax</label>
    <nameField>
        <displayFormat>ITAX-{0000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>