force-app/main/default/objects/Invoice_Taxes__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>If &quot;Override&quot; is checked, its value is Override Amount, otherwise it will be calculated Amount from Tax% defined in related Tax record.</description>
    <inlineHelpText>If &quot;Override&quot; is checked, its value is Override Amount, otherwise it will be calculated Amount from Tax% defined in related Tax record.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>