force-app/main/default/objects/Invoice_Taxes__c/fields/InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmount__c</fullName>
    <formula>Invoice__r.Total_Line_Items_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>