force-app/main/default/objects/Invoice_Taxes__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the amount is overridden</inlineHelpText>
    <label>Override?</label>
    <type>Checkbox</type>
</CustomField>