force-app/main/default/objects/Invoice_Taxes__c/fields/Override_Amoun__c.field-meta.xml
<CustomField>
    <fullName>Override_Amoun__c</fullName>
    <inlineHelpText>Override amount which will replace the calculated Tax Amount on Invoice</inlineHelpText>
    <label>Override Amoun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>