force-app/main/default/objects/Invoice_Taxes__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax</label>
    <referenceTo>Tax__c</referenceTo>
    <relationshipLabel>Invoice Taxes</relationshipLabel>
    <relationshipName>Invoice_Taxes</relationshipName>
    <type>Lookup</type>
</CustomField>