force-app/main/default/objects/Invoice_Taxes__c/fields/TaxPercent__c.field-meta.xml
<CustomField>
    <fullName>TaxPercent__c</fullName>
    <formula>Tax__r.Tax_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>